--- a/arc_manager/templates/base.html
+++ b/arc_manager/templates/base.html
@@ -53,6 +53,9 @@
         </main>
     </div>
     
+    <!-- jQuery (necesario para compatibilidad con algunos scripts) -->
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    
     <!-- Bootstrap JS Bundle con Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     
